--- a/local_rmd_nbooks/m2_integration_all.Rmd
+++ b/local_rmd_nbooks/m2_integration_all.Rmd
@@ -63,25 +63,33 @@ suppressPackageStartupMessages({
 
 #  integration of all MSC
 
+
+```{r setup}
+sample_set = "Mali2"
+
+knitr::opts_knit$set(root.dir = paste0("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/", sample_set))
+```
+
 ### Common functions
 
 #### Source commong functions, varriables and tables
 ```{r}
 ##Boxplot labeling function
-source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_sce_common_fns.R")
-source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/plotting_common_fns.R")
-source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/pf_common_vars.R")
+source("../multipurpose_scripts_lnk/seurat_sce/seu_sce_common_fns.R")
+source("../multipurpose_scripts_lnk/plotting_common_fns.R")
+source("mali22_code_lnk/pf_common_vars.R")
 ```
 
-```{r setup}
-sample_set = "Mali2"
+```{r}
 
-optimum_k_qcd <- c("MSC33" =8, "MSC48" =4, "MSC49" =6, "MSC55" =7, "MSC60" =7, "MSC66" =8, "MSC38" =4, "MSC40" =8, "MSC50_MACS" =1, "MSC53" =1, "MSC57" =1, "MSC24" =1, "MSC37" =5, "MSC39" =4, "MSC45" =1, "MSC50_SLO" =1, "MSC54" =1, "MSC67" =1, "MSC68" =3, "MSC70" =1)
+optimum_k_qcd <- c("MSC33" =8, "MSC48" =4, "MSC49" =6, "MSC55" =6, "MSC60" =7, "MSC66" =8, "MSC38" =4, "MSC40" =8, "MSC50_MACS" =1, "MSC53" =1, "MSC57" =1, "MSC24" =1, "MSC37" =5, "MSC39" =4, "MSC45" =1, "MSC50_SLO" =2, "MSC54" =1, "MSC67" =1, "MSC68" =3, "MSC70" =1, "MSC41"= 3, "MSC51"= 1, "MSC25"= 2)
+
+optimum_k_qcd_21 <- c("MSC1" =5, "MSC3" =2, "MSC13" =2, "MSC14" =8, "MSC12" =2)
+
+optimum_k_qcd <- c(optimum_k_qcd_21, optimum_k_qcd)
 
 optimum_k_qcd <- optimum_k_qcd[sort(names(optimum_k_qcd))]
 
-# knitr::opts_knit$set(root.dir = paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/", sample_set))
-knitr::opts_knit$set(root.dir = paste0("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/", sample_set))
 ```
 
 
@@ -99,7 +107,7 @@ system(paste0("rsync -av jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users
 ```
 
 ```{r}
-msc_qcd_anotd <-readRDS("../Mali/data/processed/DB52e_star/msc_qcd_anotd.RDS")
+# msc_qcd_anotd <-readRDS("../Mali/data/processed/DB52e_star/msc_qcd_anotd.RDS")
 
 ```
 
@@ -107,13 +115,15 @@ msc_qcd_anotd <-readRDS("../Mali/data/processed/DB52e_star/msc_qcd_anotd.RDS")
 initialize variable for the sample names
 
 ```{r}
-all_msc_filt_no_dblts <- readRDS("data/processed/Pf/all_msc_filt_no_dblts.RDS")
+all_msc_stg_qcd <- readRDS("data/processed/Pf/m2_all/all_msc_stg_qcd.RDS")
+
+map(all_msc_stg_qcd, dim)
 ```
 
 
 ```{r, eval=T}
 
-msc_qcd_anotd_mdata_14 <- msc_qcd_anotd[["MSC14"]]@meta.data %>% mutate(strain= strain_qcd) 
+# msc_qcd_anotd_mdata_14 <- msc_qcd_anotd[["MSC14"]]@meta.data %>% mutate(strain= strain_qcd) 
 ```
 
 
@@ -123,19 +133,82 @@ strn_c_new_mdata_m22_min_qcd <- readRDS("data/processed/Pf/strn_c_new_mdata_m22_
 
 ## Rename the strain columns in the metadata
 strn_c_new_mdata_m22_min_qcd <- strn_c_new_mdata_m22_min_qcd %>% map(., ~.x %>% mutate("strain_old"=strain, "strain"= StrainQCd_Man))
+
+map(strn_c_new_mdata_m22_min_qcd, dim)
+```
+
+!!!!NOTE - SHORTCUT FOR M21 SAMPLES - NEED TO RERUN PSEUDOBULK GENOTYPING INCLUDING 2021 SAMPLES - THEN THIS WILL BE DELETED
+
+```{r, warning=FALSE, eval=T}
+## optimum k from above
+
+# gtyp_step = "pbulk_gtypes_preQC_cln"
+gtyp_step = "pbulk_gtypes_preQC"
+
+##updated strain metadata
+strn_c_new_mdata_m22_m21 <- readRDS(paste0("data/processed/", species, "/" , gtyp_step, "/strn_c_new_mdata_m22.RDS")) #%>% .[names(optimum_k_qcd_21)]
+strn_c_new_mdata_m22_m21_min <- strn_c_new_mdata_m22_m21[paste0(names(optimum_k_qcd_21), "_minmap")]
+names(strn_c_new_mdata_m22_m21_min) <-  str_remove(names(strn_c_new_mdata_m22_m21_min), "_minmap")
+```
+
+!!!!NOTE - SHORTCUT FOR M21 SAMPLES - NEED TO RERUN PSEUDOBULK GENOTYPING INCLUDING 2021 SAMPLES - THEN THIS WILL BE DELETED
+```{r, warning=FALSE, eval=T}
+
+for (i in names(strn_c_new_mdata_m22_m21_min)) {
+        if (optimum_k_qcd_21[[i]] == 1) {
+          strn_c_new_mdata_m22_m21_min[[i]][,"StrainQCd"] = "SC0"
+        } else if (optimum_k_qcd_21[[i]] > 1) {
+          strn_c_new_mdata_m22_m21_min[[i]][,"StrainQCd"] = strn_c_new_mdata_m22_m21_min[[i]][,paste0('Strain_hmo_', str_remove(i, 'SC'), "_minmap_",optimum_k_qcd_21[[i]])]
+          strn_c_new_mdata_m22_m21_min[[i]][,"StrainQCd_Man"] = strn_c_new_mdata_m22_m21_min[[i]]$StrainQCd
+        } 
+    
+  }
+
+```
+
+!!!!NOTE MERGE 2021 AND 2022 SAMPLES 
+!!!!NOTE SHORTCUT FOR M21 SAMPLES - NEED TO RERUN PSEUDOBULK GENOTYPING INCLUDING 2021 SAMPLES - THEN THIS WILL BE DELETED
+
+```{r}
+## Strain
+strn_c_new_mdata_m22_min_qcd_merge <- c(strn_c_new_mdata_m22_m21_min, strn_c_new_mdata_m22_min_qcd)
+
+## Order names
+strn_c_new_mdata_m22_min_qcd_merge <- strn_c_new_mdata_m22_min_qcd_merge[sort(names(strn_c_new_mdata_m22_min_qcd_merge))]
+
+## Rename the strain columns in the metadata
+strn_c_new_mdata_m22_min_qcd_merge <- strn_c_new_mdata_m22_min_qcd_merge %>% map(., ~.x %>% mutate("strain_old"=strain, "strain"= StrainQCd_Man))
+
+map(strn_c_new_mdata_m22_min_qcd_merge, dim)
 ```
 
 ```{r}
-strn_c_new_mdata_m22_min_qcd %>% map(., ~.x %>% count(Strain_DN, StrainQCd, strain))
+## NOTE - FUTURE
+# sv_dir = "pbulk_gtypes_preQC_cln_final"
+# strn_c_new_mdata_m22_min_qcd_2 <- readRDS(paste0("data/processed/",species, "/" , sv_dir, "/strn_c_new_mdata_m22_min_qcd.RDS"))
+# 
+# 
+# # strn_c_new_mdata_m22_min_qcd <- readRDS("data/processed/Pf/strn_c_new_mdata_m22_min_qcd.RDS")
+# 
+# ## Rename the strain columns in the metadata
+# strn_c_new_mdata_m22_min_qcd <- strn_c_new_mdata_m22_min_qcd %>% map(., ~.x %>% mutate("strain_old"=strain, "strain"= StrainQCd_Man))
+# 
+# map(strn_c_new_mdata_m22_min_qcd, dim)
+```
+
+
+```{r}
+strn_c_new_mdata_m22_min_qcd_merge %>% map(., ~.x %>% count(Strain_DN, StrainQCd, strain))
 ```
 
 
 
 ```{r, fig.width = 18, fig.height = 4, message=FALSE, warning=FALSE}
 
-strn_c_new_mdata_m22_min_qcd_polyc <-  strn_c_new_mdata_m22_min_qcd[names(optimum_k_qcd[optimum_k_qcd>1])]
+strn_c_new_mdata_m22_min_qcd_polyc <-  strn_c_new_mdata_m22_min_qcd_merge[names(optimum_k_qcd[optimum_k_qcd>1])]
 
-ss_bar_plt <-list( c(strn_c_new_mdata_m22_min_qcd_polyc, list(msc_qcd_anotd_mdata_14 )), c(names(strn_c_new_mdata_m22_min_qcd_polyc), "MSC14"))  %>% 
+# ss_bar_plt <-list( c(strn_c_new_mdata_m22_min_qcd_polyc, list(msc_qcd_anotd_mdata_14 )), c(names(strn_c_new_mdata_m22_min_qcd_polyc), "MSC14"))  %>% 
+ss_bar_plt <-list( c(strn_c_new_mdata_m22_min_qcd_polyc), c(names(strn_c_new_mdata_m22_min_qcd_polyc)))  %>% 
   purrr::pmap(.,~{
   a_tbl <- ..1 %>%
       mutate(across(stage_afm, ~factor(., levels=c('Asexual', 'Female', 'Male', 'Developing', 'Unassigned')))) %>%
@@ -186,18 +259,10 @@ ss_bar_plt <-list( c(strn_c_new_mdata_m22_min_qcd_polyc, list(msc_qcd_anotd_mdat
 ```
 
 
-```{r}
-map(strn_c_new_mdata_m22_min_qcd, dim)
-```
-
-
-```{r}
-map(all_msc_filt_no_dblts, dim)
-```
 
 ```{r, fig.width=12, fig.height=4}
 # add stage metadata
-all_msc_filt_no_dblts <- pmap(list(all_msc_filt_no_dblts[names(strn_c_new_mdata_m22_min_qcd)], strn_c_new_mdata_m22_min_qcd, names(strn_c_new_mdata_m22_min_qcd)), ~{
+all_msc_stg_qcd <- pmap(list(all_msc_stg_qcd[names(strn_c_new_mdata_m22_min_qcd_merge)], strn_c_new_mdata_m22_min_qcd_merge, names(strn_c_new_mdata_m22_min_qcd_merge)), ~{
   ..2 %>% 
   mutate(StrainDon = paste0(str_remove(..3, "SC"), "_", strain)) %>%
   select(bcode, strain, StrainDon) %>% 
@@ -208,9 +273,10 @@ all_msc_filt_no_dblts <- pmap(list(all_msc_filt_no_dblts[names(strn_c_new_mdata_
 ```
 
 
+
 Rename the stage columns to allow merging with mali 21 samples
 ```{r}
-all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>% 
+all_msc_stg_qcd <- all_msc_stg_qcd %>% 
   imap(., ~.x@meta.data %>% 
          rename(c("stage" = StagePrelim, "stage_c" = StagePrelimC) ) %>% 
         select(stage, stage_c) %>% 
@@ -219,39 +285,48 @@ all_msc_filt_no_dblts <- all_msc_filt_no_dblts %>%
 # rm(msc_qcd_anotd)
 ```
 
+
+```{r, fig.width=12, fig.height=4}
+# add stage metadata
+map(all_msc_stg_qcd, ~.x@meta.data %>% count(stage, strain) )
+
+```
+
 Add MSC from 2022
 ```{r}
-msc_qcd_anotd_hmnz <- msc_qcd_anotd %>% 
-  imap(., ~.x@meta.data %>% 
-         rename(c("strain" = Strain_DN) ) %>% 
-        mutate("stage" = str_replace_all(stageHL, c("Gametocyte \\(female\\)" = "Female", "Gametocyte \\(male\\)" = "Male", "Female \\(LE\\)" = "Female LE", "Male \\(LE\\)" = "Male LE")), 
-               "stage_c" = case_when(stage %in% c("Late ring", "Early trophozoite") ~ "Asexual", T ~ stage), 
-               "StrainDon"= paste0(str_remove(.y, "SC"), "_", strain)) %>% 
-        select(stage, strain, StrainDon, stage_c) %>% AddMetaData(.x, .) )
-
-# rm(msc_qcd_anotd)
+# msc_qcd_anotd_hmnz <- msc_qcd_anotd %>% 
+#   imap(., ~.x@meta.data %>% 
+#          rename(c("strain" = Strain_DN) ) %>% 
+#         mutate("stage" = str_replace_all(stageHL, c("Gametocyte \\(female\\)" = "Female", "Gametocyte \\(male\\)" = "Male", "Female \\(LE\\)" = "Female LE", "Male \\(LE\\)" = "Male LE")), 
+#                "stage_c" = case_when(stage %in% c("Late ring", "Early trophozoite") ~ "Asexual", T ~ stage), 
+#                "StrainDon"= paste0(str_remove(.y, "SC"), "_", strain)) %>% 
+#         select(stage, strain, StrainDon, stage_c) %>% AddMetaData(.x, .) )
+# 
+# # rm(msc_qcd_anotd)
 ```
 
 
 ```{r, message=FALSE, warning=FALSE, eval=T}
 ##Save msc14 h5ad
 
-msc_qcd_anotd_hmnz <- map(msc_qcd_anotd_hmnz, ~{
-  
-  ##Convert to v3 object since v5 not supported by seuratdisk 
-  obj <- .x
-  obj[["RNA5"]] <- as(object = obj[["RNA"]], Class = "Assay5")
-  DefaultAssay(obj) <- "RNA5"
-  obj[["RNA"]] <- NULL
-  obj <- RenameAssays(object = obj, RNA5 = 'RNA')
- 
-})
+# msc_qcd_anotd_hmnz <- map(msc_qcd_anotd_hmnz, ~{
+#   
+#   ##Convert to v3 object since v5 not supported by seuratdisk 
+#   obj <- .x
+#   obj[["RNA5"]] <- as(object = obj[["RNA"]], Class = "Assay5")
+#   DefaultAssay(obj) <- "RNA5"
+#   obj[["RNA"]] <- NULL
+#   obj <- RenameAssays(object = obj, RNA5 = 'RNA')
+#  
+# })
 
 ```
 
 
 ```{r}
-m21_22_filt <- c(msc_qcd_anotd_hmnz,  all_msc_filt_no_dblts)
+# m21_22_filt <- c(msc_qcd_anotd_hmnz,  all_msc_stg_qcd)
+m21_22_filt <-  all_msc_stg_qcd
+
 ```
 
 
@@ -283,7 +358,7 @@ all_msc_w_strns_don <- map(m21_22_filt, ~{
 
 ```{r, fig.width=12, fig.height=4}
 # add stage metadata
-saveRDS(all_msc_w_strns_don, "data/processed/Pf/all_msc_w_strns_don.RDS")
+saveRDS(all_msc_w_strns_don, "data/processed/Pf/m2_all/all_msc_w_strns_don.RDS")
 ```
 
 ```{r, eval=T}
@@ -306,6 +381,7 @@ all_msc_w_strns_don %>% .[c("MSC33", "MSC57")] %>% imap(., ~.x@meta.data[, c("st
 ```{r}
 # all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC38", "MSC39", "MSC55")]
 all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC37","MSC38", "MSC39")]
+# all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("MSC24", "MSC37","MSC38", "MSC39")]
 ```
 
 #### Remove strain doublets and negatives
@@ -313,10 +389,115 @@ all_msc_w_strns_don <- all_msc_w_strns_don[!names(all_msc_w_strns_don) %in% c("M
 msc_w_cln_strns <- map(all_msc_w_strns_don, ~subset(.x, cells = .x@meta.data %>% filter(!(strain %in% c("Doublet", "Negative"))) %>% rownames()))
 ```
 
+```{r}
+saveRDS(msc_w_cln_strns, "data/processed/Pf/m2_all/msc_w_cln_strns.RDS")
+```
 
 ```{r, eval=T}
 
 imap(msc_w_cln_strns, ~DimPlot(.x, group.by = "stage_c") + scale_color_manual(values = sp_fld_colors) + labs(title = .y))
+```
+
+Findmarkers for each cluster
+```{r}
+# Idents(msc_w_cln_strns) <- "stage_c"
+msc_w_cln_strns<- map(msc_w_cln_strns,  ~SetIdent(.x, value="stage_c"))
+```
+
+```{r}
+all_mrks <- imap(msc_w_cln_strns, ~{
+  
+  print(.y)
+  seurobj <- .x
+  seurobj[["RNA"]]$data <- as(object = seurobj[["RNA"]]$data, Class = "dgCMatrix")
+  FindAllMarkers(object = seurobj)
+  
+  })
+```
+
+
+```{r}
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Asexual") 
+```
+
+
+```{r}
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.05 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Asexual") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene)
+```
+
+```{r}
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.05 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Female") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene)
+```
+```{r}
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.05 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Male") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene)
+```
+
+```{r}
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.5 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Female LE") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene)
+```
+
+```{r}
+## https://pubmed.ncbi.nlm.nih.gov/37708854/
+all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% dplyr::filter(cluster == "Female LE") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene) %>% dplyr::filter(gene %in% c("PF3D7-1322900", "PF3D7-0418800", "PF3D7-1340400", "PF3D7-0315700"))
+```
+
+```{r}
+asx_mkrs <- all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.05 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == "Asexual") %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene) %>% distinct(gene, .keep_all = T) %>% head(n=10) %>% select(Gene, gene) %>% deframe()
+```
+
+```{r}
+stg_mkrs_df <- map(c("Asexual", "Female", "Male"), ~all_mrks %>% bind_rows(., .id = "donor") %>% left_join(., Pf3D7_genes_plasmoDB[, c("Gene", "gene_id")], by = c("gene"="gene_id")) %>% dplyr::filter(pct.2 < 0.05 & avg_log2FC > 0) %>% group_by(donor, cluster) %>% arrange(p_val_adj, .by_group = T) %>% slice_head(n = 5) %>% dplyr::filter(cluster == .x) %>% group_by(gene)  %>% add_count(gene, name = "gene_cnt" ) %>% arrange(desc(gene_cnt), gene) %>% distinct(gene, .keep_all = T) %>% head(n=10)) %>% set_names(c("Asexual", "Female", "Male"))
+```
+
+```{r}
+stg_mkrs <- map(stg_mkrs_df, ~ .x %>% select(Gene, gene) %>% deframe()) %>% set_names(c("Asexual", "Female", "Male"))
+```
+
+```{r}
+#ap2g, gdv1, pfs16, etramp10.3, gexp5, pfg14-744, pfg14-748
+map(msc_w_cln_strns, ~DotPlot(.x, features = as.character(asx_mkrs), group.by = "stage_c") + theme(axis.text.x = element_text(angle = 25)) + scale_x_discrete(labels = names(asx_mkrs)))
+
+
+```
+
+
+```{r}
+#ap2g, gdv1, pfs16, etramp10.3, gexp5, pfg14-744, pfg14-748
+map(msc_w_cln_strns, 
+                   ~DotPlot(.x, features = as.character(asx_mkrs), group.by = 'stage_c') +
+                     scale_x_discrete(labels= names(asx_mkrs)) +
+                     scale_fill_gradientn(colours = brewer.pal(n = 9, name = "Blues"), na.value = 'grey50', name = "Avg. Expression", guide = guide_colorbar(title.position = "top", title.hjust = 0.5, order = 2, frame.colour ="grey50", ticks.colour = "white"))+
+                     # new_scale_fill() +
+                     # geom_tile(data = data.frame(Stage = factor(levels(seu_obj@meta.data$stageHL), levels = levels(seu_obj@meta.data$stageHL))), inherit.aes = F, aes(x=0, y=Stage, fill =Stage)) +
+                     # labs(title = nm) +
+                     theme(axis.text.y = element_text(size = 16),
+                           axis.text.x = element_text(size = 16),
+                           # axis.ticks.x = element_blank(),
+                           legend.text = element_text(size = 14), 
+                           legend.title = element_text(size = 14, face = 'bold'),
+                           legend.position = "bottom", 
+                           legend.box = "horizontal",
+                           legend.spacing.x = unit(0.02, "cm"),
+                           legend.key.width = unit(0.4, "cm"),
+                           legend.box.margin = margin(t = 0, r = 4.1, b = 0, l = 0, unit = "cm"),
+                           plot.title = element_text(hjust = 0.5)
+                     ) +
+                     # scale_fill_manual(values = sp_fld_colors, name = "Stage", guide = guide_legend(nrow = 2,  title.position = "top", order = 1)) + 
+                     ##!!NOTE - turning off stage label after screen shotting - switch back on if needed
+                     # guides(fill=F, size = guide_legend(title = "% Expressed", title.position = "top")) +
+                     coord_flip()
+    )
+```
+
+```{r}
+top3_all_gns_pval0 <- map(all_mrks, possibly(~.x %>% filter(p_val_adj ==0) %>% group_by(cluster) %>% slice_max(order_by = avg_log2FC, n = 3) %>% left_join(., Pf3D7_genes_plasmoDB[, c("gene_id", "Gene")], by = c("gene" = "gene_id"))), "missing")
+
+top3_all_gns_pval0
+```
+
+
+```{r}
+saveRDS(all_mrks, "data/processed/Pf/m2_all/all_mrks.RDS")
 ```
 
 ```{r}
@@ -371,35 +552,6 @@ msc_w_cln_strns_raw<- map(msc_w_cln_strns_raw, ~{
 ```
 
 
-Write out annotated MSC14 dataset in .h5ad 
-```{r, message=FALSE, warning=FALSE, eval=T}
-# gogo()
-```
-
-Write out annotated MSC14 dataset in .h5ad 
-```{r, message=FALSE, warning=FALSE, eval=T}
-##Save msc14 h5ad
-# msc_w_cln_strns_raw <- map(msc_w_cln_strns, ~CreateSeuratObject(
-#   counts = .x[["RNA"]]$counts,
-#   meta.data = .x@meta.data
-# )
-# )
-# 
-# ##Change factor metadata to character as these are not handled properly when converting to h5ad
-# msc_w_cln_strns_raw<- map(msc_w_cln_strns_raw, ~{
-#   .x@meta.data %>% mutate(across(where(is.factor), as.character)) %>% AddMetaData(.x, .)
-# })
-# 
-# imap(msc_w_cln_strns_raw, ~system(paste0("mkdir /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/", .y)))
-
-# ## !!!NB - NEEDS SORTING IN FUTURE UPGRADING TO SEURAT 5 RESULTED IN ERROR AS DESCRIBED https://github.com/mojaveazure/seurat-disk/issues/147#top
-# imap(msc_w_cln_strns_raw, ~SeuratDisk::SaveH5Seurat(.x, filename =  paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/",.y,"/",.y,"_qcd_anotd_diet.h5Seurat"), overwrite = T))
-# 
-# 
-# imap(msc_w_cln_strns_raw, ~Convert(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/",.y,"/",.y,"_qcd_anotd_diet.h5Seurat"), dest = "h5ad", overwrite = T))
-
-```
-
 ```{r, message=FALSE, warning=FALSE, eval=T}
 ##Get the raw counts
 
@@ -421,7 +573,7 @@ saveRDS(msc_w_cln_strns_raw, "data/processed/Pf/m2_all/msc_w_cln_strns_raw.RDS")
 
 Write out raw objects into .h5ad 
 
-```{r, message=FALSE, warning=FALSE, eval=F}
+```{r, message=FALSE, warning=FALSE, eval=T}
 ##Save msc14 h5ad
 
 imap(msc_w_cln_strns_raw, ~{
@@ -488,25 +640,50 @@ std_seu_int <- function(donor_obj, lab_obj=list(), k_filt = 200, k_wt =100, nf =
 ```
 
 
-### Std seurat normalization and clustering
 ```{r}
-# specify that we will perform downstream analysis on the corrected data note that the
-# original unmodified data still resides in the "RNA" assay
-
-std_norm_seu_umap <- function(seu_int_obj, seed_n = 123456){
-  seu_int_obj %>%
-    ScaleData(., features = rownames(.), verbose = FALSE)%>% 
-    RunPCA(., features = VariableFeatures(object = .), verbose = FALSE) %>% 
-    # RunUMAP(., reduction = "pca", dims = 1:6, seed.use = 123456, n.components = 3, min.dist = 0.3, n.neighbors = 30, spread = 1, local.connectivity = 1, a =60, b = 0.9, verbose = F) %>%
-    RunUMAP(., reduction = "pca", dims = 1:6, seed.use = seed_n, n.components = 3) %>%
-    FindNeighbors(k.param = 30, verbose = F)
-}
+## Making list of objects and renaming before integrating
+m2_seu <- merge(x = msc_w_cln_strns_raw[[1]], y = msc_w_cln_strns_raw[2:length(msc_w_cln_strns_raw)], add.cell.ids = str_remove(names(msc_w_cln_strns_raw), "SC"))
+m2_seu$donor <- str_remove_all(m2_seu$orig.ident, "SC|\\.mrna")
+m2_seu$stage_c <- factor(m2_seu$stage_c, levels = c("Asexual", "Female", "Female LE", "Male", "Male LE"))
 ```
 
 
-```{r}
-## Making list of objects and renaming before integrating
-m2_list <- merge(x = msc_w_cln_strns_raw[[1]], y = msc_w_cln_strns_raw[2:length(msc_w_cln_strns_raw)], add.cell.ids = str_remove(names(msc_w_cln_strns_raw), "SC"))
+```{r, fig.width=20, fig.height=5}
+#ap2g, gdv1, pfs16, etramp10.3, gexp5, pfg14-744, pfg14-748
+
+
+map(stg_mkrs, ~DotPlot(m2_seu, features = as.character(.x), split.by = "stage_c", group.by = "donor",  
+        cols = c("#90bce5", "#ea5bba",  "#4ba7fc", "#f2e48c", "#af1527"
+)) + 
+  coord_flip()+
+  RotatedAxis() +
+  theme(axis.text.x = element_text(angle = 90)) +
+  scale_x_discrete(labels = names(.x))
+)
+
+
+```
+
+
+```{r, fig.width=20, fig.height=12}
+Idents(m2_seu) <- "stage_c"
+
+DotPlot(m2_seu, features = as.character(unlist(stg_mkrs)), split.by = "stage_c", group.by = "donor",  
+        cols = c("#ea5bba", "#90bce5",  "#4ba7fc", "#f2e48c", "#af1527"
+)) + 
+  coord_flip()+
+  RotatedAxis() +
+  theme(axis.text.x = element_text(angle = 90)) +
+  scale_x_discrete(labels = names(unlist(stg_mkrs)))
+
+
+
+```
+
+```{r, fig.width=12, fig.height=4}
+# add stage metadata
+saveRDS(stg_mkrs, "data/processed/Pf/m2_all/stg_mkrs.RDS")
+
 ```
 
 ```{r, fig.width=12, fig.height=4}
@@ -523,39 +700,45 @@ m2_list <- merge(x = msc_w_cln_strns_raw[[1]], y = msc_w_cln_strns_raw[2:length(
 Write out annotated MCA reference in .h5ad 
 ```{r, message=FALSE, warning=FALSE, eval=T}
 ##Change factor metadata to character as these are not handled properly when converting to h5ad
-m2_list_raw <- m2_list
-m2_list_raw@meta.data <- m2_list_raw@meta.data %>% mutate(across(where(is.factor), as.character))
+m2_seu_raw <- m2_seu
+m2_seu_raw@meta.data <- m2_seu_raw@meta.data %>% mutate(across(where(is.factor), as.character))
 
 ## !!!NB - NEEDS SORTING IN FUTURE UPGRADING TO SEURAT 5 RESULTED IN ERROR AS DESCRIBED https://github.com/mojaveazure/seurat-disk/issues/147#top
-m2_list_raw[["RNA3"]] <- as(object = m2_list_raw[["RNA"]], Class = "Assay")
-DefaultAssay(m2_list_raw) <- "RNA3"
-m2_list_raw[["RNA"]] <- NULL
-m2_list_raw <- RenameAssays(object = m2_list_raw, RNA3 = 'RNA')
+m2_seu_raw[["RNA3"]] <- as(object = m2_seu_raw[["RNA"]], Class = "Assay")
+DefaultAssay(m2_seu_raw) <- "RNA3"
+m2_seu_raw[["RNA"]] <- NULL
+m2_seu_raw <- RenameAssays(object = m2_seu_raw, RNA3 = 'RNA')
 
-# SaveH5Seurat(m2_list_raw, filename =  paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_list_raw.h5Seurat"), overwrite = T)
-SaveH5Seurat(m2_list_raw, filename =  paste0("data/processed/Pf/m2_all/m2_list_raw.h5Seurat"), overwrite = T)
+# SaveH5Seurat(m2_seu_raw, filename =  paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_seu_raw.h5Seurat"), overwrite = T)
+SaveH5Seurat(m2_seu_raw, filename =  paste0("data/processed/Pf/m2_all/m2_seu_raw.h5Seurat"), overwrite = T)
 
-# Convert(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_list_raw.h5Seurat"), dest = "h5ad", overwrite = T)
-Convert(paste0("data/processed/Pf/m2_all/m2_list_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+# Convert(paste0("/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_seu_raw.h5Seurat"), dest = "h5ad", overwrite = T)
+Convert(paste0("data/processed/Pf/m2_all/m2_seu_raw.h5Seurat"), dest = "h5ad", overwrite = T)
 
 ```
 
 ```{r, eval=F}
 
-system(paste0("rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_list_raw.h5ad jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/",sample_set,"/data/processed/Pf/"))
+# system(paste0("rsync -av /Users/jr35/Google\\ Drive/My\\ Drive/PHD_documents/malaria_phd/",sample_set,"/data/processed/Pf/m2_seu_raw.h5ad jr35@farm5:/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/",sample_set,"/data/processed/Pf/"))
 
 
 ```
 
 ```{r}
-# m2_list[["RNA"]] <- split(m2_list[["RNA"]], f = m2_list$orig.ident)
-m2_list
+m2_seu[["RNA"]] <- split(m2_seu[["RNA"]], f = m2_seu$orig.ident)
+
+
+```
+
+
+```{r}
+m2_seu 
 
 ```
 
 ```{r, message=FALSE, warning=FALSE}
 ## save for running stdseurat in farm
-saveRDS(m2_list, "data/processed/Pf/m2_all/m2_list.RDS")
+saveRDS(m2_seu, "data/processed/Pf/m2_all/m2_seu.RDS")
 
 ```
 
@@ -567,9 +750,9 @@ gogo()
 ## Run SNORM on farm like below
 ## !!NB - reducing the number of hypervariable genes results in scattered and disjointed clusters. higher hvg number better
 
-# nextflow run submsn_seu_norm.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_list.RDS" --o_file_name "m2_seu_norm.RDS" --umap_name "UMAP_" --hvg 500 --cluster_resoln 1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap.unintegrated" --redctn "pca" --integrtd_pc30 "no" --elbo_nm "m2_list_elbo.RDS" --resume
-```
+# nextflow run ../mali22_code_lnk/nf_scripts/submsn_seu_norm.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/seu_stdnorm.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu.RDS" --normlzn "norm" --umap_name "UMAP_" --hvg 500 --cluster_resoln 1 --cl_nm "seurat_clusters_nm" --umap_redctn_nm "umap.unintegrated" --redctn "pca" --integrtd_pc30 "no" --ncores "20" --mem "120 GB" --resume
 
+```
 
 
 ```{r}
@@ -577,28 +760,10 @@ m2_seu_norm <-  readRDS("data/processed/Pf/m2_all/m2_seu_norm.RDS")
 ```
 
 
-```{r}
-# m2_list <-  seurat_norm_stand(Seurat_object = m2_list, hvg = 500)
-```
-
-
-```{r}
-# m2_list <- FindNeighbors(m2_list, dims = 1:30, reduction = "pca")
-# m2_list <- FindClusters(m2_list, resolution = 2 )
-
-```
-
-
-```{r}
-# m2_list <- RunUMAP(m2_list, dims = 1:30, reduction = "pca", reduction.name = "umap.unintegrated")
-
-```
-
-
 ```{r, fig.width=12, fig.height=4}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-# DimPlot(m2_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "stage"), label = F)
+# DimPlot(m2_list_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "stage"), label = F)
 ```
 
 ```{r, fig.width=6, fig.height=5}
@@ -607,7 +772,7 @@ m2_seu_norm <-  readRDS("data/processed/Pf/m2_all/m2_seu_norm.RDS")
 DimPlot(m2_seu_norm, reduction = "umap.unintegrated", group.by = "stage_c", label = F, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
 ```
 
-```{r, fig.width=16, fig.height=8}
+```{r, fig.width=16, fig.height=6}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
 DimPlot(m2_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident", "stage"), label = F, pt.size = 2)
@@ -618,7 +783,38 @@ DimPlot(m2_seu_norm, reduction = "umap.unintegrated", group.by = c("orig.ident",
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
 FeaturePlot(m2_seu_norm, features = "scf_class_norm_dbt_prop")
+FeaturePlot(m2_seu_norm, features = "scf_class_rand_dbt_prop")
+FeaturePlot(m2_seu_norm, features = "scf_class_supx_rand_dbt_prop")
+FeaturePlot(m2_seu_norm, features = "scf_class_supx_rand_dbt_prop")
 ```
+
+
+```{r, warning=FALSE, message=FALSE, eval=FALSE}
+# Display the combined datasets as an interactive 3D plot
+
+plot_ly(data = data.frame(m2_seu_norm@reductions[["umap.unintegrated"]]@cell.embeddings),
+        x = ~UMAP_1, y = ~UMAP_2, z = ~UMAP_3,
+        color= m2_seu_norm@meta.data$donor,
+        # colors = c('blue', 'red'),
+        opacity = 0.8,
+        size = 1, 
+        type = 'scatter3d'
+)
+
+```
+
+```{r}
+# visualize by batch and cell type annotation
+# cell type annotations were previously added by Azimuth
+m2_seu_norm@meta.data %>% filter(donor == "MSC24") %>% count(scf_class_rand_dbt_prop, StagePrelim)
+```
+
+
+```{r}
+
+m2_seu_norm
+```
+
 
 !!!NB - FARM CODE - DONT DELETE
 
@@ -626,7 +822,9 @@ FeaturePlot(m2_seu_norm, features = "scf_class_norm_dbt_prop")
 gogo()
 ## Run harmony integration with 30 PCs and in the Seurat example
 
-# nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 8 --integrtd_pc_man "yes" --elbo_nm "harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+# nextflow run mali22_code_lnk/nf_scripts/submsn_intgrtn_pc.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 10 --integrtd_pc_man "yes" --elbo_nm "harmony_int_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+
+# nextflow run ../mali22_code_lnk/nf_scripts/submsn_intgrtn_pc.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --mthd_nm "harmony_PC_manl" --cluster_resoln 1 --intgrtn_pc 10 --integrtd_pc_man "yes" --findpc_mthd "perpendicular line" --ncores "20" --mem "120 GB" -resume
 ```
 
 ```{r, eval=T}
@@ -634,48 +832,102 @@ gogo()
 ## Run harmony integration with the number of PCs being automatically detected by findPC
 
 # nextflow run submsn_intgrtn_pc.nf --scrpt "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --o_file_name "harmony_int_PC_auto.RDS" --cluster_resoln 1 --cl_nm "harmony_clusters" --umap_redctn_nm "umap.harmony" --new_redctn "integrated.harmony" --intgrtn_pc 30 --integrtd_pc_man "no" --elbo_nm "harmony_int_PC_auto_elbo.RDS"  --findpc_mthd "perpendicular line" --resume
+
+# nextflow run ../mali22_code_lnk/nf_scripts/submsn_intgrtn_pc.nf --scrpt "/nfs/users/nfs_j/jr35/multipurpose_scripts/seurat_sce/seu_integrtn_pc_auto.R" --input_seu "/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/data/processed/Pf/m2_all/m2_seu_norm.RDS" --mthd "HarmonyIntegration" --mthd_nm "harmony" --cluster_resoln 1 --intgrtn_pc 10 --integrtd_pc_man "no" --findpc_mthd "perpendicular line" --ncores "20" --mem "120 GB" -resume
 ```
 
 
 
 ```{r}
-# harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int.RDS")
-harmony_int <-  readRDS("data/processed/Pf/m2_all/harmony_int_PC_auto.RDS")
-harmony_int_PC_auto_elbo <-  readRDS("data/processed/Pf/m2_all/harmony_int_PC_auto_elbo.RDS")
-harmony_int_PC_auto_elbo
+m2_seu_norm_harmony <-  readRDS("data/processed/Pf/m2_all/m2_seu_norm_harmony.RDS")
+m2_seu_norm_harmony_elbo <-  readRDS("data/processed/Pf/m2_all/m2_seu_norm_harmony_elbo.RDS")
+m2_seu_norm_harmony_elbo
+
+# m2_seu_norm_harmony_PC_manl <-  readRDS("data/processed/Pf/m2_all/m2_seu_norm_harmony_PC_manl.RDS")
+
 ```
 
 
 ```{r}
-harmony_int <- JoinLayers(harmony_int)
+m2_seu_norm_harmony <- JoinLayers(m2_seu_norm_harmony)
 ```
-
 
 ```{r}
 
-DimPlot(harmony_int, reduction = "umap.harmony", group.by = c("stage", "harmony_clusters"), combine = F, label = T)
+DimPlot(m2_seu_norm_harmony, reduction = "umap.harmony", group.by = c("stage"), pt.size = 1, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
+```
+
+!!NOTE - CHEATING for poster shortcut
+```{r}
+m2_seu_norm_harmony_poster <- m2_seu_norm_harmony[,!(m2_seu_norm_harmony$stage %in% c("Unassigned", "Early ring", "Late schizont"))]
+DimPlot(m2_seu_norm_harmony_poster, reduction = "umap.harmony", group.by = c("stage"), pt.size = 1, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
+```
+
+```{r, fig.width=8, fig.height=4}
+DimPlot(m2_seu_norm_harmony_poster, reduction = "pca", group.by = c("stage"), pt.size = 1, dims = c(1,2)) + 
+  scale_color_manual(values = sp_fld_colors)+
+      theme_void()+
+      theme(axis.text=element_blank(), 
+            axis.title=element_blank(),
+            title = element_blank()#,
+            ) + 
+    labs(x= "PC_1", y="PC_2")+
+    guides( x= trunc_axis, y= trunc_axis)+
+  theme(axis.line = element_line(arrow = arrow(angle = 20, length = unit(0.15, "inches"), ends = "last", type = "closed"), color = 'black'),
+        axis.title.x = element_text(hjust = 0, size=24, face = 'bold'),
+        legend.text = element_text(size=20),
+        axis.title.y = element_text(angle = 90, hjust = 0, size=24, face = 'bold', margin = margin(r = 3)))+
+  scale_x_continuous(breaks = NULL) +
+  scale_y_continuous(breaks = NULL)
+```
+
+```{r, fig.width=8, fig.height=4}
+DimPlot(m2_seu_norm_harmony_poster, reduction = "umap.harmony", group.by = c("stage"), pt.size = 1, dims = c(1,2)) + 
+  scale_color_manual(values = sp_fld_colors)+
+      theme_void()+
+      theme(#axis.text=element_text(size=18), 
+            #axis.title=element_text(size=18,face="bold"), 
+            axis.text=element_blank(), 
+            axis.title=element_blank(),
+            # title = element_text(size=18,face="bold"),
+            title = element_blank()#,
+            # aspect.ratio = 1/1,
+            ) + 
+      guides(colour = guide_legend(nrow = 7, override.aes = list(size = 5))) +
+    labs(x= "UMAP_1", y="UMAP_2")+
+    guides(color = F, x= trunc_axis, y= trunc_axis)+
+  theme(axis.line = element_line(arrow = arrow(angle = 20, length = unit(0.15, "inches"), ends = "last", type = "closed"), color = 'black'),
+        axis.title.x = element_text(hjust = 0, size=20, face = 'bold'),
+        axis.title.y = element_text(angle = 90, hjust = 0, size=20, face = 'bold', margin = margin(r = 3)))+
+  scale_x_continuous(breaks = NULL) +
+  scale_y_continuous(breaks = NULL)
+```
+
+```{r}
+
+DimPlot(m2_seu_norm_harmony, reduction = "umap.harmony", group.by = c("stage", "harmony_clusters"), combine = F, label = T, dims = c(1,2))
 ```
 
 ```{r, fig.width=6, fig.height=5}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-DimPlot(harmony_int, reduction = "umap.harmony", group.by = "stage", label = F, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
+DimPlot(m2_seu_norm_harmony, reduction = "umap.harmony", group.by = "stage", label = F, dims = c(1,2)) + scale_color_manual(values = sp_fld_colors)
 ```
 
 
 ```{r}
 # visualize by batch and cell type annotation
 # cell type annotations were previously added by Azimuth
-DimPlot(harmony_int, reduction = "umap.harmony", group.by = "orig.ident", pt.size = 2)
+DimPlot(m2_seu_norm_harmony, reduction = "umap.harmony", group.by = "orig.ident", pt.size = 2)
 ```
 
 
 ```{r, warning=FALSE, message=FALSE, eval=FALSE}
 # Display the combined datasets as an interactive 3D plot
 
-plot_ly(data = data.frame(harmony_int@reductions[["umap.harmony"]]@cell.embeddings),
+plot_ly(data = data.frame(m2_seu_norm_harmony@reductions[["umap.harmony"]]@cell.embeddings),
         x = ~umapharmony_1, y = ~umapharmony_2, z = ~umapharmony_3,
-        color= harmony_int@meta.data$donor,
+        color= m2_seu_norm_harmony@meta.data$stage,
         # colors = c('blue', 'red'),
         opacity = 0.8,
         size = 1, 
@@ -875,7 +1127,7 @@ print(colnames(colData(sce_obj)))
 sce_obj <- slingshot(sce_obj, 
             clusterLabels = "harmony_clusters_ss", 
             reducedDim = "PCA", 
-            start.clus = 0,
+            start.clus = 1,
             # end.clus = E_CLSTR,
             shrink =1, 
             stretch = 1,
